--- a/public/css/style.css
+++ b/public/css/style.css
@@ -116,7 +116,7 @@ a {
 	max-height: 500px;
 	overflow-y: scroll;
 }
-
+/* =================================================== */
 .chat-messages .message {
 	width: fit-content;
 	padding: 5px;
@@ -138,7 +138,30 @@ a {
 .chat-messages .message .meta span {
 	color: #777;
 }
+/* =================================================== */
+.chat-messages .message-self {
+	float: right;
+	width: fit-content;
+	padding: 5px;
+	margin-bottom: 15px;
+	background-color: #8AC926;
+	border-radius: 8px;
+	border-bottom-right-radius: 0px;
+	overflow-wrap: break-word;
+	color: white;
+}
 
+.chat-messages .message-self .meta {
+	font-size: 15px;
+	color: white;
+	opacity: 0.7;
+	margin-bottom: 7px;
+}
+
+.chat-messages .message-self .meta span {
+	color: white;
+}
+/* =================================================== */
 .chat-form-container {
 	border:2.5px solid;
 	border-top: 0px;
